fixed a bug where checkout-item overlapped over form-modal

--- a/src/components/form/form-modal/FormModal.styles.scss
+++ b/src/components/form/form-modal/FormModal.styles.scss
@@ -7,6 +7,7 @@
   top: 0;
   left: 0;
   background-color: rgba(#2b2b2b, 0.4);
+  z-index: 100;
 }
 
 .modal {
